--- a/Object_Oriented_Programming.ipynb
+++ b/Object_Oriented_Programming.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMamPwongVXSUtti6zWVGcD",
+      "authorship_tag": "ABX9TyNDwtxiCHR6g9BULbhZuO2P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,6 +70,48 @@
             "Name: Iteoluwakiisi Aderiye\n",
             "Grade: 7\n",
             "Age: 12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Activity 2 : Class Vehicle\n",
+        "# Define the class Vehicle\n",
+        "class Vehicle:\n",
+        "    def __init__(self, max_speed, mileage):\n",
+        "        self.max_speed = max_speed\n",
+        "        self.mileage = mileage\n",
+        "# Ask the user for input\n",
+        "max_speed_input = int(input(\"Enter the vehicle's maximum speed (in km/h): \"))\n",
+        "mileage_input = int(input(\"Enter the vehicle's mileage (in km): \"))\n",
+        "# Create an object of class Vehicle using user input\n",
+        "car =  Vehicle(max_speed_input, mileage_input)\n",
+        "# Print the values using the object\n",
+        "print(\"\\nVehicle details:\")\n",
+        "print(\"Maximum speed:\", car.max_speed, \"km/h\")\n",
+        "print(\"Mileage:\", car.mileage, \"km\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qnm0OyU_71SN",
+        "outputId": "2de9c16d-5d7a-4064-cdb5-164c0c1f6e41"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the vehicle's maximum speed (in km/h): 6\n",
+            "Enter the vehicle's mileage (in km): 5\n",
+            "\n",
+            "Vehicle details:\n",
+            "Maximum speed: 6 km/h\n",
+            "Mileage: 5 km\n"
           ]
         }
       ]
